--- a/helm/chaos-operator/templates/service.yaml
+++ b/helm/chaos-operator/templates/service.yaml
@@ -8,9 +8,9 @@ metadata:
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 spec:
-  type: {{ .Values.service.type }}
+  type: {{ .Values.controllerManager.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
+    - port: {{ .Values.controllerManager.service.port }}
       targetPort: http
       protocol: TCP
       name: http
