--- a/helm/chaos-operator/templates/controller-manager-rbac.yaml
+++ b/helm/chaos-operator/templates/controller-manager-rbac.yaml
@@ -47,7 +47,7 @@ rules:
   verbs: ["*"]
 - apiGroups: ["pingcap.com"]
   resources:
-  - podchaos
+  - podchaoses
   verbs: ["*"]
 {{- end }}
 - apiGroups: [""]
@@ -113,7 +113,7 @@ rules:
   verbs: ["*"]
 - apiGroups: ["pingcap.com"]
   resources:
-  - podchaos
+  - podchaoses
   verbs: ["*"]
 ---
 kind: RoleBinding
