--- a/manifests/crds/pod-chaos.yaml
+++ b/manifests/crds/pod-chaos.yaml
@@ -2,7 +2,7 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   # name must match the spec fields below, and be in the form: <plural>.<group>
-  name: podchaos.pingcap.com
+  name: podchaoses.pingcap.com
 spec:
   # group name to use for REST API: /apis/<group>/<version>
   group: pingcap.com
@@ -17,7 +17,7 @@ spec:
   scope: Namespaced
   names:
     # plural name to be used in the URL: /apis/<group>/<version>/<plural>
-    plural: podchaos
+    plural: podchaoses
     # singular name to be used as an alias on the CLI and for display
     singular: podchaos
     # kind is normally the CamelCased singular type. Your resource manifests use this.
