add pod-kill example
Signed-off-by: cwen0 <cwenyin0@gmail.com>

--- a/helm/chaos-operator/values.yaml
+++ b/helm/chaos-operator/values.yaml
@@ -16,7 +16,7 @@ controllerManager:
   replicaCount: 1
 
   image: hub.pingcap.net/cwen/chaos-operator:latest
-  imagePullPolicy: IfNotPresent
+  imagePullPolicy: Always
 
   nameOverride: ""
   fullnameOverride: ""
