--- a/manifests/crds/pod-chaos.yaml
+++ b/manifests/crds/pod-chaos.yaml
@@ -24,4 +24,4 @@ spec:
     kind: PodChaos
     # shortNames allow shorter string to match your resource on the CLI
     shortNames:
-      - pc
+      - pdc
