remove unused field in values.yaml
Signed-off-by: Yang Keao <keao.yang@yahoo.com>

--- a/helm/chaos-operator/values.yaml
+++ b/helm/chaos-operator/values.yaml
@@ -59,6 +59,7 @@ apiServer:
       cpu: 250m
       memory: 512Mi
 
-  mysql:
-    datasource: root:@(10.233.51.254:4000)/schrodinger_test
+  volume:
+    storage: 3Gi
+    storageClassName: chaos-operator
 
