makefile: update docker image
Signed-off-by: cwen0 <cwenyin0@gmail.com>

--- a/helm/chaos-operator/values.yaml
+++ b/helm/chaos-operator/values.yaml
@@ -15,7 +15,7 @@ controllerManager:
 
   replicaCount: 1
 
-  image: hub.pingcap.net/cwen/chaos-operator:latest
+  image: pingcap/chaos-operator:latest
   imagePullPolicy: Always
 
   nameOverride: ""
