network_chaos: develop tcdaemon to add tc netem
Signed-off-by: Yang Keao <keao.yang@yahoo.com>

--- a/helm/chaos-operator/values.yaml
+++ b/helm/chaos-operator/values.yaml
@@ -16,7 +16,7 @@ controllerManager:
   replicaCount: 1
 
   image: pingcap/chaos-operator:latest
-  imagePullPolicy: Always
+  # imagePullPolicy: Always
 
   nameOverride: ""
   fullnameOverride: ""
@@ -42,3 +42,8 @@ controllerManager:
   tolerations: []
 
   affinity: {}
+
+tcDaemon:
+  image: pingcap/chaos-operator:latest
+  #  imagePullPolicy: Always
+  port: 31767
