--- a/helm/chaos-operator/templates/controller-manager-deployment.yaml
+++ b/helm/chaos-operator/templates/controller-manager-deployment.yaml
@@ -40,6 +40,8 @@ spec:
                 fieldPath: metadata.namespace
           - name: TZ
             value: {{ .Values.timezone | default "UTC" }}
+          - name: TC_DAEMON_PORT
+            value: !!str {{ .Values.tcDaemon.port }}
     {{- with .Values.controllerManager.nodeSelector }}
       nodeSelector:
 {{ toYaml . | indent 8 }}
