--- a/images/chaos-operator/Dockerfile
+++ b/images/chaos-operator/Dockerfile
@@ -2,3 +2,4 @@ FROM alpine:3.5
 
 RUN apk add tzdata --no-cache
 ADD bin/chaos-controller-manager /usr/local/bin/chaos-controller-manager
+ADD bin/tc-daemon /usr/local/bin/tc-daemon
