--- a/helm/chaos-operator/templates/controller-manager-rbac.yaml
+++ b/helm/chaos-operator/templates/controller-manager-rbac.yaml
@@ -48,6 +48,7 @@ rules:
 - apiGroups: ["pingcap.com"]
   resources:
   - podchaoses
+  - networkchaoses
   verbs: ["*"]
 {{- end }}
 - apiGroups: [""]
@@ -114,6 +115,7 @@ rules:
 - apiGroups: ["pingcap.com"]
   resources:
   - podchaoses
+  - networkchaoses
   verbs: ["*"]
 ---
 kind: RoleBinding
