use duration string rather than number to set time and jitter
Signed-off-by: Yang Keao <keao.yang@yahoo.com>

--- a/examples/network-delay-example.yaml
+++ b/examples/network-delay-example.yaml
@@ -11,9 +11,9 @@ spec:
     labelSelectors:
       "app.kubernetes.io/component": "tikv"
   delay:
-    latency: 90000
+    latency: "90ms"
     correlation: 0.25
-    jitter: 90000
+    jitter: "90ms"
   duration: "20s"
   scheduler:
     cron: "@every 30s"
