fix bugs in pod-failure
Signed-off-by: Yang Keao <keao.yang@yahoo.com>

--- a/config/crd/bases/pingcap.com_podchaos.yaml
+++ b/config/crd/bases/pingcap.com_podchaos.yaml
@@ -53,9 +53,15 @@ spec:
               description: 'Mode defines the mode to run chaos action. Supported mode:
                 one / all / fixed / fixed-percent / random-max-percent'
               type: string
-            nextAction:
+            nextRecover:
+              description: Next time when this action will be recovered
+              format: date-time
+              nullable: true
+              type: string
+            nextStart:
               description: Next time when this action will be applied again
               format: date-time
+              nullable: true
               type: string
             scheduler:
               description: Scheduler defines some schedule rules to control the running
@@ -143,6 +149,7 @@ spec:
               properties:
                 endTime:
                   format: date-time
+                  nullable: true
                   type: string
                 phase:
                   description: ExperimentPhase is the current status of chaos experiment.
@@ -179,13 +186,8 @@ spec:
                   type: string
                 startTime:
                   format: date-time
+                  nullable: true
                   type: string
-              required:
-              - endTime
-              - phase
-              - podChaos
-              - reason
-              - startTime
               type: object
             phase:
               description: Phase is the chaos status.
