migrate network chaos part into kubebuilder
Signed-off-by: Yang Keao <keao.yang@yahoo.com>

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -9,6 +9,26 @@ rules:
 - apiGroups:
   - pingcap.com
   resources:
+  - networkchaos
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - pingcap.com
+  resources:
+  - networkchaos/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - pingcap.com
+  resources:
   - podchaos
   verbs:
   - create
