--- a/helm/chaos-operator/values.yaml
+++ b/helm/chaos-operator/values.yaml
@@ -42,3 +42,8 @@ controllerManager:
   tolerations: []
 
   affinity: {}
+
+tcDaemon:
+  image: pingcap/chaos-operator:latest
+  # imagePullPolicy: Always
+  port: 31767
