--- a/helm/chaos-operator/templates/chaos-daemon.yaml
+++ b/helm/chaos-operator/templates/chaos-daemon.yaml
@@ -1,39 +1,39 @@
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
-  name: tc-daemon
+  name: chaos-daemon
   labels:
     app.kubernetes.io/name: {{ template "chaos-operator.name" . }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
     app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/component: tc-daemon
+    app.kubernetes.io/component: chaos-daemon
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+"  "_" }}
 spec:
   selector:
     matchLabels:
       app.kubernetes.io/name: {{ template "chaos-operator.name" . }}
       app.kubernetes.io/instance: {{ .Release.Name }}
-      app.kubernetes.io/component: tc-daemon
+      app.kubernetes.io/component: chaos-daemon
   template:
     metadata:
       labels:
         app.kubernetes.io/name: {{ template "chaos-operator.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
-        app.kubernetes.io/component: tc-daemon
+        app.kubernetes.io/component: chaos-daemon
     spec:
       containers:
-        - name: tc-daemon
-          image: {{ .Values.tcDaemon.image }}
-          imagePullPolicy: {{ .Values.tcDaemon.imagePullPolicy | default "IfNotPresent" }}
-          {{- if .Values.tcDaemon.resources }}
+        - name: chaos-daemon
+          image: {{ .Values.chaosDaemon.image }}
+          imagePullPolicy: {{ .Values.chaosDaemon.imagePullPolicy | default "IfNotPresent" }}
+          {{- if .Values.chaosDaemon.resources }}
           resources:
-{{ toYaml .Values.tcDaemon.resources | indent 12 }}
+{{ toYaml .Values.chaosDaemon.resources | indent 12 }}
           {{- end }}
           command:
-            - /usr/local/bin/tc-daemon
+            - /usr/local/bin/chaos-daemon
           env:
             - name: PORT
-              value: !!str {{ .Values.tcDaemon.port }}
+              value: !!str {{ .Values.chaosDaemon.port }}
           securityContext:
             capabilities:
               add:
@@ -45,12 +45,12 @@ spec:
             - name: dockersock
               mountPath: /var/run/docker.sock
           ports:
-            - containerPort: {{ .Values.tcDaemon.port }}
-              hostPort: {{ .Values.tcDaemon.port }}
+            - containerPort: {{ .Values.chaosDaemon.port }}
+              hostPort: {{ .Values.chaosDaemon.port }}
       volumes:
         - name: proc
           hostPath:
             path: /proc
         - name: dockersock
           hostPath:
-            path: {{ .Values.tcDaemon.dockerSocketPath | default "/var/run/docker.sock" }}
+            path: {{ .Values.chaosDaemon.dockerSocketPath | default "/var/run/docker.sock" }}
