--- a/helm/chaos-operator/values.yaml
+++ b/helm/chaos-operator/values.yaml
@@ -45,5 +45,5 @@ controllerManager:
 
 tcDaemon:
   image: pingcap/chaos-operator:latest
-  # imagePullPolicy: Always
+  imagePullPolicy: Always
   port: 31767
