add network partition operation
Signed-off-by: Yang Keao <keao.yang@yahoo.com>

--- a/helm/chaos-operator/values.yaml
+++ b/helm/chaos-operator/values.yaml
@@ -44,6 +44,6 @@ controllerManager:
   affinity: {}
 
 chaosDaemon:
-  image: pingcap/chaos-operator:latest
+  image: pingcap/chaos-daemon:latest
   # imagePullPolicy: Always
   port: 31767
