--- a/helm/chaos-operator/values.yaml
+++ b/helm/chaos-operator/values.yaml
@@ -15,7 +15,7 @@ controllerManager:
 
   replicaCount: 1
 
-  image: localhost:5000/pingcap/chaos-operator:latest
+  image: pingcap/chaos-operator:latest
   imagePullPolicy: Always
 
   nameOverride: ""
@@ -44,6 +44,6 @@ controllerManager:
   affinity: {}
 
 chaosDaemon:
-  image: localhost:5000/pingcap/chaos-operator:latest
+  image: pingcap/chaos-operator:latest
   imagePullPolicy: Always
   port: 31767
