--- a/examples/io-delay-example.yaml
+++ b/examples/io-delay-example.yaml
@@ -1,15 +1,20 @@
 apiVersion: pingcap.com/v1alpha1
-kind: PodChaos
+kind: IoChaos
 metadata:
-  name: pod-kill-example
+  name: io-delay-example
   namespace: chaos-testing
 spec:
-  action: pod-kill
+  action: delay
   mode: one
+  duration: "400s"
+  configName: "chaosfs-tikv"
+  path: ""
   selector:
     namespaces:
       - demo
     labelSelectors:
       "app.kubernetes.io/component": "tikv"
+  layer: "fs"
+  delay: "1ms"
   scheduler:
-    cron: "@every 1m"
+    cron: "@every 10m"
